# openmpi-project

./: .gitignore  CMakeLists.txt  README.md  build.sh
src__hello-world/: main.cpp
